过时方法修改，表名修改，测试启动参数修改。